# kb-indexer

./: .gitignore  .pre-commit-config.yaml  README.md  check_es_content.py  docker-compose_es-kibana.yml  docker-compose_es.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: add-issue-to-projects-overview.yaml  make_release.yaml
docker/: Dockerfile
elasticsearch/: Dockerfile
indexers/: .env  __init__.py  entrypoint.py  utils.py
indexers/api/: entrypoint.py  pipeline.py
indexers/apiindexer/: indexing_pipeline.py
indexers/dataset/: common.py  convert.py  download.py  entrypoint.py  index.py  map.py  pipeline.py
indexers/dataset/data_sources/: RI_domains.json  domain.json  domain_essential_variables.json  domain_vocabularies.json  essential_variables.json  metadata**.json  metadata_schema.json
indexers/dataset/repositories/: __init__.py  common.py  dissco.py  icos.py  lifewatch.py  seadatanet_cdi.py  seadatanet_edmed.py  sios.py
indexers/datasetsearch/: Synonyms.py  WebCrawler.py  adhoc_DatasetRecords.py
indexers/datasetsearch/Metadata*/: RIs.json  (+2 more)
indexers/notebook/: crawling.py  downloading.py  entrypoint.py  indexing.py  metadata_mappings.py  notebook_contents.py  notebook_metadata.py  notebook_statistics.py  pipeline.py  preprocessing.py  repositories.py  searching.py  utils.py
indexers/notebooksearch/: notebook_crawling.py  notebook_indexing.py  notebook_preprocessing.py
indexers/system_data_checks/: check_disk.py  check_es.py  entrypoint.py
indexers/web/: entrypoint.py  pipeline.py
indexers/websearch/: adhoc_crawler.py
(+371 files in other folders)
